# ZiyouBackend

./: .env.example  .gitignore  README.md  docker-compose.yml  test.py
.github/workflows/: ci.yml
backend/: Dockerfile  entrypoint.sh  requirements.txt
backend/alembic/versions/: 3cf8b3b912c0_fix.py  659d9eb6c5fd_create_theme_table.py  98d646bd8cbb_add_chapter_edition_relation.py  9b558c714c32_add_chapter_name_to_editionchapter.py  9da814d458ec_fix.py  ee458eeda81e_chapter_edition_relationship.py
backend/datafiles/: edition_comparison.sql  edition_comparison.txt  edition_list.sql  other_edition_chapter_list.txt  ziyou_chapter_list.txt
backend/proto_python_file/: recommendation_pb2.py
backend/src/: crud.py  models.py  schemas.py
backend/src/api/: routes.py
backend/src/db/: session.py
backend/src/services/: problem_service.py  recommendation_service.py
backend/src/test/: test_api.py
backend/src/utils/: pdf_generator.py  problem_command.py  transform.py
backend/test/: test_api.py
protos/: recommendation.proto
recommendation_system/: Dockerfile  entrypoint.sh
recommendation_system/src/: recommendation.pb.cc
volume/web/: README.md
volume/web/backend/: alembic.ini  requirements.txt
volume/web/backend/alembic/: env.py
volume/web/backend/datafiles/: edition_comparison.txt
volume/web/backend/src/: crud.py  (+3 more)
volume/web/recommendation_system/: CMakeLists.txt
volume/web/recommendation_system/src/: main.cpp  recommendation.grpc.pb.cc  recommendation.grpc.pb.h  recommendation.pb.h  recommendation_service_impl.cpp  recommendation_service_impl.h
(+35 files in other folders)
